exemploGC-2025-main/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  type : INT
   9       | FLOAT
  10       | BOOL

  11  campo : type ID ';'
  12        | type ID '[' NUM ']' ';'

  13  l_campos : l_campos campo
  14           |

  15  decl : type ID ';'
  16       | type ID '[' NUM ']' ';'
  17       | ID ID '[' NUM ']' ';'
  18       | STRUCT ID '{' l_campos '}' ';'
  19       | ID ID ';'

  20  lcmd : lcmd cmd
  21       |

  22  cmd : exp ';'
  23      | '{' lcmd '}'
  24      | WRITE '(' LIT ')' ';'

  25  $$4 :

  26  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  27      | READ '(' ref ')' ';'

  28  $$5 :

  29  $$6 :

  30  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  31  $$7 :

  32  cmd : DO $$7 cmd WHILE '(' exp ')' ';'
  33      | BREAK ';'
  34      | CONTINUE ';'

  35  $$8 :

  36  $$9 :

  37  $$10 :

  38  cmd : FOR '(' opt_exp ';' $$8 for_cond_opt ';' $$9 opt_exp ')' $$10 cmd

  39  $$11 :

  40  cmd : IF '(' exp $$11 ')' cmd restoIf

  41  $$12 :

  42  restoIf : ELSE $$12 cmd
  43          |

  44  exp : NUM
  45      | TRUE
  46      | FALSE
  47      | ref
  48      | '(' exp ')'
  49      | '!' exp
  50      | ref MAIS_IGUAL exp
  51      | ref '=' exp
  52      | INC ref
  53      | ref INC
  54      | DEC ref
  55      | ref DEC
  56      | exp '+' exp
  57      | exp '-' exp
  58      | exp '*' exp
  59      | exp '/' exp
  60      | exp '%' exp
  61      | exp '>' exp
  62      | exp '<' exp
  63      | exp EQ exp
  64      | exp LEQ exp
  65      | exp GEQ exp
  66      | exp NEQ exp
  67      | exp OR exp
  68      | exp AND exp

  69  $$13 :

  70  $$14 :

  71  exp : exp INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp

  72  opt_exp : exp
  73          |

  74  ref : ID
  75      | ID '.' ID
  76      | ID '[' exp ']'
  77      | ID '.' ID '[' exp ']'
  78      | ID '[' exp ']' '.' ID

  79  for_cond_opt : exp
  80               |

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	ID  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	STRUCT  shift 7
	VOID  reduce 7

	type  goto 8
	dList  goto 9
	decl  goto 10


state 3
	decl : ID . ID '[' NUM ']' ';'  (17)
	decl : ID . ID ';'  (19)

	ID  shift 11
	.  error


state 4
	type : INT .  (8)

	.  reduce 8


state 5
	type : FLOAT .  (9)

	.  reduce 9


state 6
	type : BOOL .  (10)

	.  reduce 10


state 7
	decl : STRUCT . ID '{' l_campos '}' ';'  (18)

	ID  shift 12
	.  error


state 8
	decl : type . ID ';'  (15)
	decl : type . ID '[' NUM ']' ';'  (16)

	ID  shift 13
	.  error


state 9
	prog : $$1 dList . mainF  (2)

	VOID  shift 14
	.  error

	mainF  goto 15


state 10
	dList : decl . dList  (6)
	dList : .  (7)

	ID  shift 3
	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	STRUCT  shift 7
	VOID  reduce 7

	type  goto 8
	dList  goto 16
	decl  goto 10


state 11
	decl : ID ID . '[' NUM ']' ';'  (17)
	decl : ID ID . ';'  (19)

	';'  shift 17
	'['  shift 18
	.  error


state 12
	decl : STRUCT ID . '{' l_campos '}' ';'  (18)

	'{'  shift 19
	.  error


state 13
	decl : type ID . ';'  (15)
	decl : type ID . '[' NUM ']' ';'  (16)

	';'  shift 20
	'['  shift 21
	.  error


state 14
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 22
	.  error


state 15
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 16
	dList : decl dList .  (6)

	.  reduce 6


state 17
	decl : ID ID ';' .  (19)

	.  reduce 19


state 18
	decl : ID ID '[' . NUM ']' ';'  (17)

	NUM  shift 23
	.  error


state 19
	decl : STRUCT ID '{' . l_campos '}' ';'  (18)
	l_campos : .  (14)

	.  reduce 14

	l_campos  goto 24


state 20
	decl : type ID ';' .  (15)

	.  reduce 15


state 21
	decl : type ID '[' . NUM ']' ';'  (16)

	NUM  shift 25
	.  error


state 22
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 26
	.  error


state 23
	decl : ID ID '[' NUM . ']' ';'  (17)

	']'  shift 27
	.  error


state 24
	l_campos : l_campos . campo  (13)
	decl : STRUCT ID '{' l_campos . '}' ';'  (18)

	INT  shift 4
	FLOAT  shift 5
	BOOL  shift 6
	'}'  shift 28
	.  error

	type  goto 29
	campo  goto 30


state 25
	decl : type ID '[' NUM . ']' ';'  (16)

	']'  shift 31
	.  error


state 26
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 32
	.  error


state 27
	decl : ID ID '[' NUM ']' . ';'  (17)

	';'  shift 33
	.  error


state 28
	decl : STRUCT ID '{' l_campos '}' . ';'  (18)

	';'  shift 34
	.  error


state 29
	campo : type . ID ';'  (11)
	campo : type . ID '[' NUM ']' ';'  (12)

	ID  shift 35
	.  error


state 30
	l_campos : l_campos campo .  (13)

	.  reduce 13


state 31
	decl : type ID '[' NUM ']' . ';'  (16)

	';'  shift 36
	.  error


state 32
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 37


state 33
	decl : ID ID '[' NUM ']' ';' .  (17)

	.  reduce 17


state 34
	decl : STRUCT ID '{' l_campos '}' ';' .  (18)

	.  reduce 18


state 35
	campo : type ID . ';'  (11)
	campo : type ID . '[' NUM ']' ';'  (12)

	';'  shift 38
	'['  shift 39
	.  error


state 36
	decl : type ID '[' NUM ']' ';' .  (16)

	.  reduce 16


state 37
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 40
	.  error


state 38
	campo : type ID ';' .  (11)

	.  reduce 11


state 39
	campo : type ID '[' . NUM ']' ';'  (12)

	NUM  shift 41
	.  error


state 40
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (21)

	.  reduce 21

	lcmd  goto 42


state 41
	campo : type ID '[' NUM . ']' ';'  (12)

	']'  shift 43
	.  error


state 42
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (20)
	$$3 : .  (4)

	ID  shift 44
	NUM  shift 45
	READ  shift 46
	WRITE  shift 47
	IF  shift 48
	WHILE  shift 49
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	DO  shift 54
	FOR  shift 55
	BREAK  shift 56
	CONTINUE  shift 57
	'!'  shift 58
	'('  shift 59
	'{'  shift 60
	'}'  reduce 4

	$$3  goto 61
	cmd  goto 62
	exp  goto 63
	ref  goto 64


state 43
	campo : type ID '[' NUM ']' . ';'  (12)

	';'  shift 65
	.  error


state 44
	ref : ID .  (74)
	ref : ID . '.' ID  (75)
	ref : ID . '[' exp ']'  (76)
	ref : ID . '.' ID '[' exp ']'  (77)
	ref : ID . '[' exp ']' '.' ID  (78)

	'['  shift 66
	'.'  shift 67
	EQ  reduce 74
	LEQ  reduce 74
	GEQ  reduce 74
	NEQ  reduce 74
	AND  reduce 74
	OR  reduce 74
	INC  reduce 74
	DEC  reduce 74
	MAIS_IGUAL  reduce 74
	INTERROGACAO  reduce 74
	DOIS_PONTOS  reduce 74
	'='  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	')'  reduce 74
	';'  reduce 74
	']'  reduce 74


state 45
	exp : NUM .  (44)

	.  reduce 44


state 46
	cmd : READ . '(' ref ')' ';'  (27)

	'('  shift 68
	.  error


state 47
	cmd : WRITE . '(' LIT ')' ';'  (24)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (26)

	'('  shift 69
	.  error


state 48
	cmd : IF . '(' exp $$11 ')' cmd restoIf  (40)

	'('  shift 70
	.  error


state 49
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (30)
	$$5 : .  (28)

	.  reduce 28

	$$5  goto 71


state 50
	exp : TRUE .  (45)

	.  reduce 45


state 51
	exp : FALSE .  (46)

	.  reduce 46


state 52
	exp : INC . ref  (52)

	ID  shift 44
	.  error

	ref  goto 72


state 53
	exp : DEC . ref  (54)

	ID  shift 44
	.  error

	ref  goto 73


state 54
	cmd : DO . $$7 cmd WHILE '(' exp ')' ';'  (32)
	$$7 : .  (31)

	.  reduce 31

	$$7  goto 74


state 55
	cmd : FOR . '(' opt_exp ';' $$8 for_cond_opt ';' $$9 opt_exp ')' $$10 cmd  (38)

	'('  shift 75
	.  error


state 56
	cmd : BREAK . ';'  (33)

	';'  shift 76
	.  error


state 57
	cmd : CONTINUE . ';'  (34)

	';'  shift 77
	.  error


state 58
	exp : '!' . exp  (49)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 78
	ref  goto 64


state 59
	exp : '(' . exp ')'  (48)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 79
	ref  goto 64


state 60
	cmd : '{' . lcmd '}'  (23)
	lcmd : .  (21)

	.  reduce 21

	lcmd  goto 80


state 61
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 81
	.  error


state 62
	lcmd : lcmd cmd .  (20)

	.  reduce 20


state 63
	cmd : exp . ';'  (22)
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	EQ  shift 82
	LEQ  shift 83
	GEQ  shift 84
	NEQ  shift 85
	AND  shift 86
	OR  shift 87
	INTERROGACAO  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	';'  shift 96
	.  error


state 64
	exp : ref .  (47)
	exp : ref . MAIS_IGUAL exp  (50)
	exp : ref . '=' exp  (51)
	exp : ref . INC  (53)
	exp : ref . DEC  (55)

	INC  shift 97
	DEC  shift 98
	MAIS_IGUAL  shift 99
	'='  shift 100
	EQ  reduce 47
	LEQ  reduce 47
	GEQ  reduce 47
	NEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	INTERROGACAO  reduce 47
	DOIS_PONTOS  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	')'  reduce 47
	';'  reduce 47
	']'  reduce 47


state 65
	campo : type ID '[' NUM ']' ';' .  (12)

	.  reduce 12


state 66
	ref : ID '[' . exp ']'  (76)
	ref : ID '[' . exp ']' '.' ID  (78)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 101
	ref  goto 64


state 67
	ref : ID '.' . ID  (75)
	ref : ID '.' . ID '[' exp ']'  (77)

	ID  shift 102
	.  error


state 68
	cmd : READ '(' . ref ')' ';'  (27)

	ID  shift 44
	.  error

	ref  goto 103


state 69
	cmd : WRITE '(' . LIT ')' ';'  (24)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (26)

	LIT  shift 104
	.  error


state 70
	cmd : IF '(' . exp $$11 ')' cmd restoIf  (40)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 105
	ref  goto 64


state 71
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (30)

	'('  shift 106
	.  error


state 72
	exp : INC ref .  (52)

	.  reduce 52


state 73
	exp : DEC ref .  (54)

	.  reduce 54


state 74
	cmd : DO $$7 . cmd WHILE '(' exp ')' ';'  (32)

	ID  shift 44
	NUM  shift 45
	READ  shift 46
	WRITE  shift 47
	IF  shift 48
	WHILE  shift 49
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	DO  shift 54
	FOR  shift 55
	BREAK  shift 56
	CONTINUE  shift 57
	'!'  shift 58
	'('  shift 59
	'{'  shift 60
	.  error

	cmd  goto 107
	exp  goto 63
	ref  goto 64


state 75
	cmd : FOR '(' . opt_exp ';' $$8 for_cond_opt ';' $$9 opt_exp ')' $$10 cmd  (38)
	opt_exp : .  (73)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	';'  reduce 73

	exp  goto 108
	ref  goto 64
	opt_exp  goto 109


state 76
	cmd : BREAK ';' .  (33)

	.  reduce 33


state 77
	cmd : CONTINUE ';' .  (34)

	.  reduce 34


78: shift/reduce conflict (shift 88, reduce 49) on INTERROGACAO
state 78
	exp : '!' exp .  (49)
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	INTERROGACAO  shift 88
	EQ  reduce 49
	LEQ  reduce 49
	GEQ  reduce 49
	NEQ  reduce 49
	AND  reduce 49
	OR  reduce 49
	DOIS_PONTOS  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'%'  reduce 49
	')'  reduce 49
	';'  reduce 49
	']'  reduce 49


state 79
	exp : '(' exp . ')'  (48)
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	EQ  shift 82
	LEQ  shift 83
	GEQ  shift 84
	NEQ  shift 85
	AND  shift 86
	OR  shift 87
	INTERROGACAO  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	')'  shift 110
	.  error


state 80
	lcmd : lcmd . cmd  (20)
	cmd : '{' lcmd . '}'  (23)

	ID  shift 44
	NUM  shift 45
	READ  shift 46
	WRITE  shift 47
	IF  shift 48
	WHILE  shift 49
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	DO  shift 54
	FOR  shift 55
	BREAK  shift 56
	CONTINUE  shift 57
	'!'  shift 58
	'('  shift 59
	'{'  shift 60
	'}'  shift 111
	.  error

	cmd  goto 62
	exp  goto 63
	ref  goto 64


state 81
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 82
	exp : exp EQ . exp  (63)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 112
	ref  goto 64


state 83
	exp : exp LEQ . exp  (64)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 113
	ref  goto 64


state 84
	exp : exp GEQ . exp  (65)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 114
	ref  goto 64


state 85
	exp : exp NEQ . exp  (66)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 115
	ref  goto 64


state 86
	exp : exp AND . exp  (68)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 116
	ref  goto 64


state 87
	exp : exp OR . exp  (67)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 117
	ref  goto 64


state 88
	exp : exp INTERROGACAO . $$13 exp DOIS_PONTOS $$14 exp  (71)
	$$13 : .  (69)

	.  reduce 69

	$$13  goto 118


state 89
	exp : exp '>' . exp  (61)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 119
	ref  goto 64


state 90
	exp : exp '<' . exp  (62)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 120
	ref  goto 64


state 91
	exp : exp '+' . exp  (56)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 121
	ref  goto 64


state 92
	exp : exp '-' . exp  (57)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 122
	ref  goto 64


state 93
	exp : exp '*' . exp  (58)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 123
	ref  goto 64


state 94
	exp : exp '/' . exp  (59)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 124
	ref  goto 64


state 95
	exp : exp '%' . exp  (60)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 125
	ref  goto 64


state 96
	cmd : exp ';' .  (22)

	.  reduce 22


state 97
	exp : ref INC .  (53)

	.  reduce 53


state 98
	exp : ref DEC .  (55)

	.  reduce 55


state 99
	exp : ref MAIS_IGUAL . exp  (50)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 126
	ref  goto 64


state 100
	exp : ref '=' . exp  (51)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 127
	ref  goto 64


state 101
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)
	ref : ID '[' exp . ']'  (76)
	ref : ID '[' exp . ']' '.' ID  (78)

	EQ  shift 82
	LEQ  shift 83
	GEQ  shift 84
	NEQ  shift 85
	AND  shift 86
	OR  shift 87
	INTERROGACAO  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	']'  shift 128
	.  error


state 102
	ref : ID '.' ID .  (75)
	ref : ID '.' ID . '[' exp ']'  (77)

	'['  shift 129
	EQ  reduce 75
	LEQ  reduce 75
	GEQ  reduce 75
	NEQ  reduce 75
	AND  reduce 75
	OR  reduce 75
	INC  reduce 75
	DEC  reduce 75
	MAIS_IGUAL  reduce 75
	INTERROGACAO  reduce 75
	DOIS_PONTOS  reduce 75
	'='  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	')'  reduce 75
	';'  reduce 75
	']'  reduce 75


state 103
	cmd : READ '(' ref . ')' ';'  (27)

	')'  shift 130
	.  error


state 104
	cmd : WRITE '(' LIT . ')' ';'  (24)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (26)
	$$4 : .  (25)

	')'  shift 131
	','  reduce 25

	$$4  goto 132


state 105
	cmd : IF '(' exp . $$11 ')' cmd restoIf  (40)
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)
	$$11 : .  (39)

	EQ  shift 82
	LEQ  shift 83
	GEQ  shift 84
	NEQ  shift 85
	AND  shift 86
	OR  shift 87
	INTERROGACAO  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	')'  reduce 39

	$$11  goto 133


state 106
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (30)

	ID  shift 44
	NUM  shift 45
	TRUE  shift 50
	FALSE  shift 51
	INC  shift 52
	DEC  shift 53
	'!'  shift 58
	'('  shift 59
	.  error

	exp  goto 134
	ref  goto 64


state 107
	cmd : DO $$7 cmd . WHILE '(' exp ')' ';'  (32)

	WHILE  shift 135
	.  error


state 108
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)
	opt_exp : exp .  (72)

	EQ  shift 82
	LEQ  shift 83
	GEQ  shift 84
	NEQ  shift 85
	AND  shift 86
	OR  shift 87
	INTERROGACAO  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	')'  reduce 72
	';'  reduce 72


state 109
	cmd : FOR '(' opt_exp . ';' $$8 for_cond_opt ';' $$9 opt_exp ')' $$10 cmd  (38)

	';'  shift 136
	.  error


state 110
	exp : '(' exp ')' .  (48)

	.  reduce 48


state 111
	cmd : '{' lcmd '}' .  (23)

	.  reduce 23


112: shift/reduce conflict (shift 88, reduce 63) on INTERROGACAO
state 112
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp EQ exp .  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	INTERROGACAO  shift 88
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	EQ  reduce 63
	LEQ  reduce 63
	GEQ  reduce 63
	NEQ  reduce 63
	AND  reduce 63
	OR  reduce 63
	DOIS_PONTOS  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	')'  reduce 63
	';'  reduce 63
	']'  reduce 63


113: shift/reduce conflict (shift 88, reduce 64) on INTERROGACAO
state 113
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp LEQ exp .  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	INTERROGACAO  shift 88
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	EQ  reduce 64
	LEQ  reduce 64
	GEQ  reduce 64
	NEQ  reduce 64
	AND  reduce 64
	OR  reduce 64
	DOIS_PONTOS  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	')'  reduce 64
	';'  reduce 64
	']'  reduce 64


114: shift/reduce conflict (shift 88, reduce 65) on INTERROGACAO
state 114
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp GEQ exp .  (65)
	exp : exp . NEQ exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	INTERROGACAO  shift 88
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	EQ  reduce 65
	LEQ  reduce 65
	GEQ  reduce 65
	NEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	DOIS_PONTOS  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	')'  reduce 65
	';'  reduce 65
	']'  reduce 65


115: shift/reduce conflict (shift 88, reduce 66) on INTERROGACAO
state 115
	exp : exp . '+' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '*' exp  (58)
	exp : exp . '/' exp  (59)
	exp : exp . '%' exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . EQ exp  (63)
	exp : exp . LEQ exp  (64)
	exp : exp . GEQ exp  (65)
	exp : exp . NEQ exp  (66)
	exp : exp NEQ exp .  (66)
	exp : exp . OR exp  (67)
	exp : exp . AND exp  (68)
	exp : exp . INTERROGACAO $$13 exp DOIS_PONTOS $$14 exp  (71)

	INTERROGACAO  shift 88
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	EQ  reduce 66
	LEQ  reduce 66
	GEQ  reduce 66
	NEQ  reduce 66
	AND  reduce 66
	OR  reduce 66
	DOIS_PONTOS  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	')'  reduce 66
	';'  reduce 66
	']'  reduce 66

